--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ h1 {
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     font-weight: bold;
-    background-color:aqua;
+    background-color:rgb(255, 255, 255);
 
 }
 
